--- a/Czech/main/MiuiSystemUI.apk/res/values-cs/strings.xml
+++ b/Czech/main/MiuiSystemUI.apk/res/values-cs/strings.xml
@@ -1910,5 +1910,29 @@ Jakýkoli uživatel může aktualizovat aplikace všech ostatních uživatelů."
   <string name="wireless_change_to_ac_charging">Bezdrátové nabíjení</string>
   <string name="wireless_charge_current">Nabíjení</string>
   <string name="wireless_charge_reset_device">Nabíjení je pomalé. Změntě polohu zařízení.</string>
-  <string name="wireless_charge_reset_device_detail">Zkontrolujte umístění zařízení na podložce</string>  
+  <string name="wireless_charge_reset_device_detail">Zkontrolujte umístění zařízení na podložce</string> 
+  <string name="face_data_input_structure_title">3D data tváře</string>
+  <string name="rgb_face_data_introduction_title">Přidat 2D data tváře</string>
+  <string name="rgb_face_data_manage_delete_msg">Vymazat 2D data tváře</string>
+  <string name="structure_face_data_input_timeout_msg">Nelze zaznamenat. Zkuste to znovu.</string>
+  <string name="structure_face_data_input_timeout_title">Zkusit znovu</string>
+  <string name="structure_face_data_manage_delete_msg">Vymazat 3D data tváře</string>
+  <string name="structure_face_hardware_abnormal_btn">Rozumím</string>
+  <string name="structure_face_hardware_abnormal_msg">Nelze zaznamenat tvář kvůli chybě laseru.</string>
+  <string name="structure_face_hardware_abnormal_title">Chyba laseru</string>
+  <string name="structure_face_modules_abnormal_btn">Restart</string>
+  <string name="structure_face_modules_abnormal_msg">Nelze zaznamenat tvář kvůli chybě optického senzoru. Zkuste restartovat zařízení.</string>
+  <string name="structure_face_modules_abnormal_title">Chyba optického senzoru</string>
+  <string name="structure_face_unlock_model2d_dialog_msg">3D rozpoznávání tváře bude deaktivováno. Vaše 3D data tváře budou vymazána. Bude nutné přidat 2D data tváře. Přepnout na 2D?</string>
+  <string name="structure_face_unlock_model2d_dialog_title">2D rozpoznávání tváře</string>
+  <string name="structure_face_unlock_model3d_dialog_msg">2D rozpoznávání tváře bude deaktivováno. Vaše 2D data tváře budou vymazána. Bude nutné přidat 3D data tváře. Přepnout na 3D?</string>
+  <string name="structure_face_unlock_model3d_dialog_title">Povolení 3D rozpoznávání</string>
+  <string name="structure_face_unlock_model_dialog_enable">Povolit</string>
+  <string name="structure_face_unlock_model_dialog_notenable">Ne</string>
+  <string name="structure_face_unlock_model_other">Jiné</string>
+  <string name="structure_face_unlock_model_other_msg_2d">2D rozpoznávání</string>
+  <string name="structure_face_unlock_model_other_msg_3d">3D rozpoznávání</string>
+  <string name="structure_face_unlock_model_other_suggestion_2d">2D rozpoznávání tváře je méně bezpečné, než ochrana vzorem, PIN nebo heslo.</string>
+  <string name="structure_face_unlock_model_other_suggestion_3d">3D rozpoznávání tváře je relativně bezpečné.</string>
+  <string name="structure_face_unlock_model_other_title">Rozpoznávání tváře</string> 
 </resources>
