--- a/Czech/main/MiuiSystemUI.apk/res/values-cs/strings.xml
+++ b/Czech/main/MiuiSystemUI.apk/res/values-cs/strings.xml
@@ -1935,4 +1935,5 @@ Jakýkoli uživatel může aktualizovat aplikace všech ostatních uživatelů."
   <string name="structure_face_unlock_model_other_suggestion_2d">2D rozpoznávání tváře je méně bezpečné, než ochrana vzorem, PIN nebo heslo.</string>
   <string name="structure_face_unlock_model_other_suggestion_3d">3D rozpoznávání tváře je relativně bezpečné.</string>
   <string name="structure_face_unlock_model_other_title">Rozpoznávání tváře</string> 
+  <string name="lockscreen_storage_locked">Odemkněte pro všechny funkce a data</string>
 </resources>
