--- a/Czech/main/Settings.apk/res/values-cs/strings.xml
+++ b/Czech/main/Settings.apk/res/values-cs/strings.xml
@@ -5404,4 +5404,6 @@ Nastavení zařízení může vyžadovat přenos nemalého množství dat."</str
   <string name="bt_ldac_settings">Nastavení</string>
   <string name="structure_manage_facerecoginition_text">Spravovat 3D data tváře</string>
   <string name="rgb_manage_facerecoginition_text">Spravovat 3D data tváře</string>
+  <string name="status_bar_settings_notification_led_custom">Farba</string>
+  <string name="status_bar_settings_notification_sound_custom">Zvuk</string>
 </resources>
