--- a/Czech/main/Settings.apk/res/values-cs/strings.xml
+++ b/Czech/main/Settings.apk/res/values-cs/strings.xml
@@ -5405,7 +5405,7 @@ Nastavení zařízení může vyžadovat přenos nemalého množství dat."</str
   <string name="bt_ldac_settings">Nastavení</string>
   <string name="structure_manage_facerecoginition_text">Spravovat 3D data tváře</string>
   <string name="rgb_manage_facerecoginition_text">Spravovat 3D data tváře</string>
-  <string name="status_bar_settings_notification_led_custom">Farba</string>
+  <string name="status_bar_settings_notification_led_custom">Barva</string>
   <string name="status_bar_settings_notification_sound_custom">Zvuk</string>
   <string name="sound_stereo_mode_summary">Dostupné pouze v případě přehrávání zvuku reproduktorem</string>
   <string name="sound_stereo_mode_title">Stereo zvuk</string>
