--- a/Czech/main/Settings.apk/res/values-cs/strings.xml
+++ b/Czech/main/Settings.apk/res/values-cs/strings.xml
@@ -5413,4 +5413,5 @@ Nastavení zařízení může vyžadovat přenos nemalého množství dat."</str
   <string name="structure_face_enroll_not_able_low_electric_itle">Tuto funkci nelze použít z důvdu slabé baterie</string>
   <string name="structure_face_enroll_not_able_low_electric_msg">Baterie musí být nabita alespoň na 5%.</string>
   <string name="status_bar_settings_notification_shade_shortcut">Zkratka v roletce</string>
+  <string name="keyguard_vertical_clock_title">Vertikální hodiny</string>
 </resources>
