--- a/Czech/main/ThemeManager.apk/res/values-cs/strings.xml
+++ b/Czech/main/ThemeManager.apk/res/values-cs/strings.xml
@@ -462,4 +462,5 @@ ale obsah, který hledáte, není dostupný ve Vaší zemi."</string>
   <string name="wallpaper_settings_no_history">Žádná historie</string>
   <string name="wallpaper_settings_pad_more_page_title">Více tapet</string>
   <string name="wallpaper_settings_page_title">tapeta</string>
+  <string name="wallpaper_set_as_desktop">Nastavit jako plochu</string>
 </resources>
