--- a/Czech/main/DeskClock.apk/res/values-cs/strings.xml
+++ b/Czech/main/DeskClock.apk/res/values-cs/strings.xml
@@ -212,4 +212,6 @@
   <string name="content_desc_keep_screen">\"Nezhasínat displej\" tlačítko</string>
   <string name="timer_cancel_hint">Zastavit</string>
   <string name="timer_end_time">Časovač skončí za %s</string>
+  <string name="timer_can_continue_in_timer">Otevřete časovač pro pokračování</string>
+  <string name="timer_is_paused">Časovač je pozastaven</string>
 </resources>
