--- a/Czech/main/Music.apk/res/values-cs/strings.xml
+++ b/Czech/main/Music.apk/res/values-cs/strings.xml
@@ -1023,5 +1023,9 @@ poskytována především firmou Ultimate Inc."</string>
 
 Klepněte na %s
  pro zahájení tohoto stahování, jakmile se příště připojíte k síti Wi-Fi."</string>
-  <string name="wifi_required_title">Pro stažení tohoto souboru byste se měli připojit k síti Wi-Fi</string>
+  <string name="wifi_required_title">Pro stažení tohoto souboru se připojte k síti Wi-Fi</string>
+  <string name="wifi_required_title">Tento soubor by měl být stažen přes Wi-Fi</string>
+  <string name="headset_and_audio_effect_category">Sluchátka a efekty</string>
+  <string name="headset_and_audio_effect_summary">Sluchátka a ekvalizer</string>
+  <string name="headset_and_audio_effect_title">Sluchátka a efekty</string>
 </resources>
