--- a/Czech/main/MiuiCamera.apk/res/values-cs/strings.xml
+++ b/Czech/main/MiuiCamera.apk/res/values-cs/strings.xml
@@ -621,5 +621,7 @@ vyčistěte jej pro ostřejší fotografie."</string>
   <string name="lighting_pattern_stage">Pódium</string>
   <string name="pref_camera_super_resolution_title">Povolit SR</string> 
   <string name="pref_camera_video_bokeh_off">Video bokeh je vypnuté</string>
-  <string name="pref_camera_video_bokeh_on">Video bokeh</string>   
+  <string name="pref_camera_video_bokeh_on">Video bokeh</string> 
+  <string name="preference_other">Ostatní</string>
+  <string name="preference_privacy_title">Ochrana soukromí</string>  
 </resources>
