--- a/Czech/main/SecurityCenter.apk/res/values-cs/strings.xml
+++ b/Czech/main/SecurityCenter.apk/res/values-cs/strings.xml
@@ -2897,4 +2897,67 @@ Remaining data includes data that has been rolled over from the previous month."
   <string name="notification_exit_extreme_mode_text">Baterie má víc než %s</string>
   <string name="notification_exit_extreme_mode_title">Vypnuta Extrémní úspora baterie</string>
   <string name="notification_open_extreme_mode_text">Povolena Extrémní úspora baterie</string>
+  <string name="button_background_connection">Povolit</string>
+  <string name="button_block_calls_from_cantacts">Odblokovat</string>
+  <string name="button_block_calls_from_strangers">Odblokovat</string>
+  <string name="button_do_not_disturb">Deaktivovat</string>
+  <string name="button_eye_shield">Deaktivovat</string>
+  <string name="button_first_aid_kit">Opravit</string>
+  <string name="button_restrict_data_usage">Povolit</string>
+  <string name="first_aid_activity_title">První pomoc</string>
+  <string name="first_aid_card_airplane_button">Deaktivovat</string>
+  <string name="first_aid_card_airplane_summary">Deaktivovat režim Letadlo pro hovory a připojení k síti</string>
+  <string name="first_aid_card_airplane_title">Nelze uskutečnit hovory</string>
+  <string name="first_aid_card_apn_button">Opravit</string>
+  <string name="first_aid_card_apn_summary">APN bylo změněn. Opravit pro připojení k síti.</string>
+  <string name="first_aid_card_apn_title">Nelze se připojit k síti</string>
+  <string name="first_aid_card_consume_power_button1">Zakázat</string>
+  <string name="first_aid_card_consume_power_button2">Deaktivovat</string>
+  <string name="first_aid_card_consume_power_button3">Deaktivovat</string>
+  <string name="first_aid_card_consume_power_button4">Deaktivovat</string>
+  <string name="first_aid_card_consume_power_summary1">Více jak 5 aplikací má povolen autostart.</string>
+  <string name="first_aid_card_consume_power_summary2">Deaktivovat hotspot pro úsporu baterie</string>
+  <string name="first_aid_card_consume_power_summary3">Deaktivovat Bluetooth pro úsporu baterie</string>
+  <string name="first_aid_card_consume_power_summary4">Deaktivovat GPS pro úsporu baterie</string>
+  <string name="first_aid_card_consume_power_title">Spotřeba baterie</string>
+  <string name="first_aid_card_float_window_button">Zakázat</string>
+  <string name="first_aid_card_float_window_summary">%s může být zobrazena nesprávně. Zakažte plovoucí upozornění.</string>
+  <string name="first_aid_card_float_window_title">Povoleno plovoucí upozornění</string>
+  <string name="first_aid_card_kadun_button1">Uvolnit místo</string>
+  <string name="first_aid_card_kadun_button2">Zakázat</string>
+  <string name="first_aid_card_kadun_button3">Deaktivovať</string>
+  <string name="first_aid_card_kadun_summary1">Uvolněte místo na úložišti pro správné fungování systému.</string>
+  <string name="first_aid_card_kadun_summary2">Některé aplikace mají práva administrátora.</string>
+  <string name="first_aid_card_kadun_summary3">Příliš mnoho aplikací pro ulehčení ovládání pracuje současně.</string>
+  <string name="first_aid_card_kadun_title">Zpomalené zařízení</string>
+  <string name="first_aid_card_system_root_button">Zakázat</string>
+  <string name="first_aid_card_system_root_summary">Zakažte práva ROOT pro bezpečný systém</string>
+  <string name="first_aid_card_system_root_title">ROOT práva jsou povolena</string>
+  <string name="first_aid_card_unable_install_button">Uvolnit místo</string>
+  <string name="first_aid_card_unable_install_summary">Je dostupných jen %s na úložišti. Uvolněte místo pro instalaci aplikací.</string>
+  <string name="first_aid_card_unable_install_title">Nelze instalovat aplikace</string>
+  <string name="first_aid_card_wifi_or_flow_button">Připojit</string>
+  <string name="first_aid_card_wifi_or_flow_summary">Povolte Wi-Fi nebo mobilní data</string>
+  <string name="first_aid_card_wifi_or_flow_title">Nelze se připojit k internetu</string>
+  <string name="first_aid_dialog_msg_stop_scan">Zastavit kontrolu?</string>
+  <string name="first_aid_dialog_title_stop_scan">Zastavit kontrolu</string>
+  <string name="first_aid_item1_content">Výkon</string>
+  <string name="first_aid_item2_content">Připojení</string>
+  <string name="first_aid_item3_content">Nastavení</string>
+  <string name="first_aid_item4_content">Baterie</string>
+  <string name="first_aid_item5_content">Ostatní problémy</string>
+  <string name="first_aid_result_feedback_button">Odeslat</string>
+  <string name="first_aid_result_feedback_summary">Neumím vyřešit problém se zařízením.</string>
+  <string name="first_aid_result_feedback_title">Zpětná vazba</string>
+  <string name="first_aid_result_summary_normal">Vše je v pořádku!</string>
+  <string name="first_aid_scanning_item1">Kontrola výkonu...</string>
+  <string name="first_aid_scanning_item2">Kontrola sítě...</string>
+  <string name="first_aid_scanning_item3">Kontrola nastavení...</string>
+  <string name="first_aid_scanning_item4">Kontrola baterie...</string>
+  <string name="first_aid_scanning_item5">Kontrola ostatních problémů...</string>
+  <string name="first_aid_stop_scan">Zastavit kontrolu</string>
+  <string name="summary_first_aid_kit">Opravit problémy</string>
+  <string name="title_first_aid_kit">První pomoc</string>
+  <string name="title_like">Líbí se mi</string>
+  <string name="title_reply">Komentář</string>
 </resources>
