--- a/Czech/main/Browser.apk/res/values-cs/strings.xml
+++ b/Czech/main/Browser.apk/res/values-cs/strings.xml
@@ -1009,4 +1009,6 @@ Chcete opustit tuto stránku?"</string>
   <string name="data_traffic_continue">Pokračovat</string>
   <string name="data_traffic_prompt_free_data">Přehrávání videa na mobilních datech může navýšit vaše poplatky.</string>
   <string name="data_traffic_stop">Ukončit</string>  
+  <string name="pref_privacy_policy">Ochrana soukromí</string>
+  <string name="data_traffic_goto">Spotřeba dat</string>
 </resources>
